dnl configure.ac for the qhull package
dnl Author: Rafael Laboissiere <rafael@debian.org>
dnl Created: Mon Dec  3 21:36:21 CET 2001

AC_INIT(qhull, 2009.1)
AC_CONFIG_SRCDIR(src/qhull.c)

AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR(config)

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_LIBTOOL

AC_CONFIG_FILES([
  Makefile 
  src/Makefile 
  html/Makefile 
  eg/Makefile
  config/Makefile
])

AC_OUTPUT
